--- a/tomcat/form.css
+++ b/tomcat/form.css
@@ -1,3 +1,54 @@
 body{
     text-align:center;
 }
+
+form {
+    /* フォームをページの中央に置く */
+    margin: 0 auto;
+    width: 600px;
+    /* フォームの範囲がわかるようにする */
+    padding: 1em;
+    border: 1px solid #CCC;
+    border-radius: 1em;
+  }
+
+  form div{
+    margin-bottom: 1em;
+  }
+
+  label {
+    /* すべてのラベルを同じサイズにして、きちんと揃える */
+    display: inline-block;
+    width: 120px;
+    text-align: right;
+  }
+
+  input,textarea  {
+    /* すべてのテキストフィールドのフォント設定を一致させる
+       デフォルトで、textarea は等幅フォントが設定されている */
+    font: 1em sans-serif;
+  
+    /* すべてのテキストフィールドを同じサイズにする */
+    width: 300px;
+    box-sizing: border-box;
+  
+    /* テキストフィールドのボーダーの外見を同一にする */
+    border: 1px solid #999;
+  }
+
+  textarea{
+      height: 150px;
+      vertical-align: top;
+       /* テキスト入力に十分な領域を与える */
+  }
+
+  p.submit{
+    width: 20px;
+    box-sizing: border-box;
+  
+  }
+
+  p.reset{
+      width: 200px;
+      box-sizing: border-box;
+  }
