--- a/tomcat/form.css
+++ b/tomcat/form.css
@@ -23,7 +23,7 @@ form {
     text-align: right;
   }
 
-  input,textarea  {
+  input.input {
     /* すべてのテキストフィールドのフォント設定を一致させる
        デフォルトで、textarea は等幅フォントが設定されている */
     font: 1em sans-serif;
@@ -39,16 +39,21 @@ form {
   textarea{
       height: 150px;
       vertical-align: top;
+      width: 300px;
+      box-sizing: border-box;
+      border: 1px solid #999;
        /* テキスト入力に十分な領域を与える */
   }
 
-  p.submit{
-    width: 20px;
-    box-sizing: border-box;
-  
+
+  ul.button li{
+    display: inline-block;
+    width: 100px;
+    height: 50px;
+    margin:10px 30px 0px 30px;  
+    
   }
 
-  p.reset{
-      width: 200px;
-      box-sizing: border-box;
+  input.reset,input.submit{
+    width: 100px;
   }
