--- a/bbs/form.css
+++ b/bbs/form.css
@@ -1,6 +1,7 @@
 body{
   text-align:center;
 }
+
 .box{
 width: 600px;
 border: solid 1px #A7A7A7;/*線*/
@@ -20,15 +21,18 @@ form {
   border: 1px solid #CCC;
   border-radius: 1em;
 }
+
 form div{
   margin-bottom: 1em;
 }
+
 label {
   /* すべてのラベルを同じサイズにして、きちんと揃える */
   display: inline-block;
   width: 120px;
   text-align: right;
 }
+
 input.input {
   /* すべてのテキストフィールドのフォント設定を一致させる
      デフォルトで、textarea は等幅フォントが設定されている */
@@ -39,6 +43,7 @@ input.input {
   /* テキストフィールドのボーダーの外見を同一にする */
   border: 1px solid #999;
 }
+
 textarea{
     height: 150px;
     vertical-align: top;
@@ -47,12 +52,14 @@ textarea{
     border: 1px solid #999;
      /* テキスト入力に十分な領域を与える */
 }
-ul.button li{
+
+.buttons1 li{
   display: inline-block;
   width: 100px;
   height: 50px;
   margin:10px 30px 0px 30px;  
 }
+
 input.reset,input.submit{
   width: 100px;
 }
@@ -68,4 +75,10 @@ input.reset,input.submit{
 
 td{
   display: inline-block;
+  word-break : break-all;
+}
+
+.buttons2{
+text-align: right;
+vertical-align: bottom;
 }
