[add] サブウィンドウを開くコード実装

--- a/bbs/style.css
+++ b/bbs/style.css
@@ -48,22 +48,20 @@ textarea{
      /* テキスト入力に十分な領域を与える */
 }
 /*ul.button li*/
-.buttons1 li{
+.buttons1 li{ 
   display: inline-block;
   width: 100px;
-  height: 50px;
+  height: 10px;
   margin:10px 30px 0px 30px;  
 }
-input.reset,input.submit{
-  width: 100px;
-}
 
-.ID{
+
+#ID{
   color: darkslategrey;
   font-weight:bolder;
 }
 
-.TITLE{
+#TITLE{
   color: slategray;
 }
 
@@ -75,4 +73,8 @@ td{
 .buttons2{
 text-align: right;
 vertical-align: bottom;
+}
+
+.btn{
+  width:80px;
 }
