--- a/bbs/style.css
+++ b/bbs/style.css
@@ -61,6 +61,11 @@ textarea{
   font-weight:bolder;
 }
 
+#REPLY_ID{
+  color: rgb(206, 169, 121);
+  font-weight:bolder;
+}
+
 #TITLE{
   color: slategray;
 }
